--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,12 +17,12 @@ build:
 
 requirements:
   host:
-    - jupyter-packaging >=0.10,<1
+    - jupyter-packaging >=0.9,<1
     - python >=3.7
     - pip
   run:
     - python >=3.7
-    - jupyter_server >=1.8.0,<2.0.0
+    - jupyter_server >=1.8.0
     - notebook <7
     - notebook-shim >=0.1.0
 
