--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,10 +13,10 @@ build:
   noarch: python
   script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv
   entry_points:
-    - jupyter-bundlerextension = nbclassic.bundler.bundlerextensions:main
     - jupyter-nbclassic = nbclassic.notebookapp:main
-    - jupyter-nbextension = nbclassic.nbextensions:main
-    - jupyter-serverextension = nbclassic.serverextensions:main
+    - jupyter-nbclassic-bundlerextension = nbclassic.bundler.bundlerextensions:main
+    - jupyter-nbclassic-extension = nbclassic.nbextensions:main
+    - jupyter-nbclassic-serverextension = nbclassic.serverextensions:main
 
 requirements:
   host:
@@ -51,9 +51,9 @@ test:
   commands:
     - pip check
     - jupyter nbclassic --help
-    - jupyter nbextension --help
-    - jupyter serverextension --help
-    - jupyter bundlerextension --help
+    - jupyter nbclassic-extension --help
+    - jupyter nbclassic-serverextension --help
+    - jupyter nbclassic-bundlerextension --help
     - jupyter server extension list
     - jupyter server extension list 1>server_extensions 2>&1
     - cat server_extensions | grep -iE "nbclassic.*enabled"
