comment out notebook_shim serverextension checks

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -59,8 +59,9 @@ test:
     - jupyter server extension list 1>server_extensions 2>&1
     - cat server_extensions | grep -iE "nbclassic.*enabled"
     - cat server_extensions | grep -iE "nbclassic.*OK"
-    - cat server_extensions | grep -iE "notebook_shim.*enabled"
-    - cat server_extensions | grep -iE "notebook_shim.*OK"
+    # #27: is this expected?
+    # - cat server_extensions | grep -iE "notebook_shim.*enabled"
+    # - cat server_extensions | grep -iE "notebook_shim.*OK"
   downstreams:
     - jupyterlab
     - jupyterlab_server
