Add variant that only requires nbconvert-core

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,11 @@
 {% set version = "0.5.3" %}
 
+{% set build_number = 1 %}
+
+{% if use_pandoc is not defined %}
+{% set use_pandoc = "yes" %}
+{% endif %}
+
 package:
   name: nbclassic
   version: {{ version }}
@@ -9,7 +15,7 @@ source:
   sha256: 889772a7ba524eb781d2901f396540bcad41151e1f7e043f12ebc14a6540d342
 
 build:
-  number: 1
+  number: {{ build_number * 2 + (use_pandoc != "no") }}
   noarch: python
   script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv
   entry_points:
@@ -33,7 +39,7 @@ requirements:
     - jupyter_client >=6.1.1
     - jupyter_core >=4.6.1
     - jupyter_server >=1.8
-    - nbconvert-core >=5
+    - nbconvert{{ "" if use_pandoc != "no" else "-core" }} >=5
     - nbformat
     - nest-asyncio >=1.5
     - notebook-shim >=0.1.0
