--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -8,12 +8,12 @@ jobs:
     vmImage: ubuntu-latest
   strategy:
     matrix:
-      linux_64_use_pandocno:
-        CONFIG: linux_64_use_pandocno
+      linux_64_nbconvert_variantnbconvert:
+        CONFIG: linux_64_nbconvert_variantnbconvert
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
-      linux_64_use_pandocyes:
-        CONFIG: linux_64_use_pandocyes
+      linux_64_nbconvert_variantnbconvert-core:
+        CONFIG: linux_64_nbconvert_variantnbconvert-core
         UPLOAD_PACKAGES: 'True'
         DOCKER_IMAGE: quay.io/condaforge/linux-anvil-cos7-x86_64
   timeoutInMinutes: 360
