--- a/.ci_support/linux_64_nbconvert_variantnbconvert-core.yaml
+++ b/.ci_support/linux_64_nbconvert_variantnbconvert-core.yaml
@@ -6,5 +6,5 @@ channel_targets:
 - conda-forge main
 docker_image:
 - quay.io/condaforge/linux-anvil-cos7-x86_64
-use_pandoc:
-- 'yes'
+nbconvert_variant:
+- nbconvert-core
