--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -2,8 +2,8 @@
 
 {% set build_number = 1 %}
 
-{% if use_pandoc is not defined %}
-{% set use_pandoc = "yes" %}
+{% if nbconvert_variant is not defined %}
+{% set nbconvert_variant = "nbconvert" %}
 {% endif %}
 
 package:
@@ -15,7 +15,7 @@ source:
   sha256: 889772a7ba524eb781d2901f396540bcad41151e1f7e043f12ebc14a6540d342
 
 build:
-  number: {{ build_number * 2 + (use_pandoc != "no") }}
+  number: {{ build_number * 2 + (nbconvert_variant == "nbconvert") }}
   noarch: python
   script: {{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv
   entry_points:
@@ -39,7 +39,7 @@ requirements:
     - jupyter_client >=6.1.1
     - jupyter_core >=4.6.1
     - jupyter_server >=1.8
-    - nbconvert{{ "" if use_pandoc != "no" else "-core" }} >=5
+    - {{ nbconvert_variant }} >=5
     - nbformat
     - nest-asyncio >=1.5
     - notebook-shim >=0.1.0
