--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -16,6 +16,7 @@ build:
   number: 0
   noarch: python
   script:
+    - yarn
     - ${{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation --disable-pip-version-check
   python:
     entry_points:
@@ -63,6 +64,8 @@ tests:
       - cat server_extensions | grep -iE "nbclassic.*enabled"
       - cat server_extensions | grep -iE "nbclassic.*${{ version | replace('.', '\\.') }}.*OK"
   - files:
+      recipe:
+        - run_test.py
       source:
         - tests/
     requirements:
@@ -70,7 +73,6 @@ tests:
       - nbval
       - pytest-cov
       - pytest-jupyter
-      - pytest-playwright
       - pytest-tornasync
       - requests
       - testpath
@@ -79,12 +81,31 @@ tests:
         then:
           - requests-unixsocket
     script:
-      - pytest -vv
-
+      - python run_test.py
 
 about:
   license: BSD-3-Clause
-  license_file: LICENSE
+  license_file:
+    - LICENSE
+    - node_modules/@bower_components/backbone/LICENSE
+    - node_modules/@bower_components/bootstrap/LICENSE
+    - node_modules/@bower_components/bootstrap-tour/LICENSE
+    - node_modules/@bower_components/codemirror/LICENSE
+    - node_modules/@bower_components/font-awesome/README.md
+    - node_modules/@bower_components/google-caja/README.md
+    - node_modules/@bower_components/jed/README.md
+    - node_modules/@bower_components/jquery-typeahead/LICENSE
+    - node_modules/@bower_components/jquery-ui/LICENSE
+    - node_modules/@bower_components/marked/LICENSE.md
+    - node_modules/@bower_components/MathJax/LICENSE
+    - node_modules/@bower_components/MathJax/fonts/HTML-CSS/STIX-Web/OFL.txt
+    - node_modules/@bower_components/moment/LICENSE
+    - node_modules/@bower_components/react/LICENSE
+    - node_modules/@bower_components/requirejs/LICENSE
+    - node_modules/@bower_components/requirejs-plugins/LICENSE.mdown
+    - node_modules/@bower_components/requirejs-text/LICENSE
+    - node_modules/@bower_components/text-encoding/LICENSE.md
+    - node_modules/@bower_components/underscore/LICENSE
   summary: Jupyter Notebook as a Jupyter Server extension.
   homepage: https://github.com/jupyter/nbclassic
   documentation: https://nbclassic.readthedocs.io
