--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -16,7 +16,6 @@ build:
   number: 0
   noarch: python
   script:
-    - yarn
     - ${{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation --disable-pip-version-check
   python:
     entry_points:
@@ -33,7 +32,6 @@ requirements:
     - jupyter_server >=1.17.0
     - pip
     - python ${{ python_min }}.*
-    - yarn <2
   run:
     - ipykernel
     - ipython_genutils
@@ -51,18 +49,14 @@ tests:
   - requirements:
       run:
         - python ${{ python_min }}.*
-        - if: win
-          then:
-            - m2-grep
     script:
       - jupyter nbclassic --help
       - jupyter nbclassic-extension --help
       - jupyter nbclassic-serverextension --help
       - jupyter nbclassic-bundlerextension --help
       - jupyter server extension list
-      - jupyter server extension list 1>server_extensions 2>&1
-      - cat server_extensions | grep -iE "nbclassic.*enabled"
-      - cat server_extensions | grep -iE "nbclassic.*${{ version | replace('.', '\\.') }}.*OK"
+      - jupyter server extension list | python -c "import re, sys; assert re.search(r'nbclassic.*enabled', sys.stdin.read())"
+      - jupyter server extension list | python -c "import re, sys; assert re.search(r'nbclassic.*${{ version | replace('.', '\\.') }}.*OK', sys.stdin.read())"
   - files:
       recipe:
         - run_test.py
@@ -87,25 +81,22 @@ about:
   license: BSD-3-Clause
   license_file:
     - LICENSE
-    - node_modules/@bower_components/backbone/LICENSE
-    - node_modules/@bower_components/bootstrap/LICENSE
-    - node_modules/@bower_components/bootstrap-tour/LICENSE
-    - node_modules/@bower_components/codemirror/LICENSE
-    - node_modules/@bower_components/font-awesome/README.md
-    - node_modules/@bower_components/google-caja/README.md
-    - node_modules/@bower_components/jed/README.md
-    - node_modules/@bower_components/jquery-typeahead/LICENSE
-    - node_modules/@bower_components/jquery-ui/LICENSE
-    - node_modules/@bower_components/marked/LICENSE.md
-    - node_modules/@bower_components/MathJax/LICENSE
-    - node_modules/@bower_components/MathJax/fonts/HTML-CSS/STIX-Web/OFL.txt
-    - node_modules/@bower_components/moment/LICENSE
-    - node_modules/@bower_components/react/LICENSE
-    - node_modules/@bower_components/requirejs/LICENSE
-    - node_modules/@bower_components/requirejs-plugins/LICENSE.mdown
-    - node_modules/@bower_components/requirejs-text/LICENSE
-    - node_modules/@bower_components/text-encoding/LICENSE.md
-    - node_modules/@bower_components/underscore/LICENSE
+    - nbclassic/static/components/backbone/LICENSE
+    - nbclassic/static/components/bootstrap/LICENSE
+    - nbclassic/static/components/bootstrap-tour/LICENSE
+    - nbclassic/static/components/codemirror/LICENSE
+    - nbclassic/static/components/font-awesome/README.md
+    - nbclassic/static/components/google-caja-sanitizer/README.md
+    - nbclassic/static/components/jed/README.md
+    - nbclassic/static/components/jquery-typeahead/LICENSE
+    - nbclassic/static/components/jquery-ui/LICENSE.txt
+    - nbclassic/static/components/marked/LICENSE.md
+    - nbclassic/static/components/MathJax/LICENSE
+    - nbclassic/static/components/MathJax/fonts/HTML-CSS/STIX-Web/OFL.txt
+    - nbclassic/static/components/moment/LICENSE
+    - nbclassic/static/components/react/LICENSE
+    - nbclassic/static/components/requirejs-text/LICENSE
+    - nbclassic/static/components/underscore/LICENSE
   summary: Jupyter Notebook as a Jupyter Server extension.
   homepage: https://github.com/jupyter/nbclassic
   documentation: https://nbclassic.readthedocs.io
